--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Revellion Technologies</title>
+    <title>Revellion LLC - Please Wait</title>
+    <link rel="icon" href="static/images/R.svg"/>
     <link rel="stylesheet" href="static/css/index.css">
 </head>
 
