attempting local image for imessage preview

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Revellion LLC - Please Wait</title>
     <link rel="icon" href="static/images/R.svg"/>
     <link rel="stylesheet" href="static/css/index.css">
+    <meta property="og:title" content="Revellion LLC" />
+    <meta property="og:image" content="static/images/R.svg" />
 </head>
 
 <body>
