--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="static/images/R.svg"/>
     <link rel="stylesheet" href="static/css/index.css">
     <meta property="og:title" content="Revellion LLC" />
-    <meta property="og:image" content="static/images/R.svg" />
+    <meta property="og:image" content="https://github.com/RevellionLLC/RevellionLLC.github.io/blob/7f49adba674d5b28242607b14b519a1347fdab8d/static/images/R.png?raw=true" />
 </head>
 
 <body>
