--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Revellion LLC - Please Wait</title>
     <link rel="icon" href="static/images/R.svg"/>
     <link rel="stylesheet" href="static/css/index.css">
-    <meta property="og:title" content="Revellion LLC" />
+    <meta property="og:title" content="Revellion Technologies" />
     <meta property="og:image" content="https://github.com/RevellionLLC/RevellionLLC.github.io/blob/7f49adba674d5b28242607b14b519a1347fdab8d/static/images/R.png?raw=true" />
 </head>
 
