added text animation

--- a/password.html
+++ b/password.html
@@ -11,13 +11,25 @@
 
         
         function checkPassword(){
-            let password = document.getElementById("password").value;
             let outputField  = document.getElementById("output");
+            let password = document.getElementById("password").value;
             let passwordBook = {
                 29: "Let the games begin."
             }
             console.log(password);
-            outputField.innerText = passwordBook[password] ? passwordBook[password] : "Password Invalid."
+            let information = passwordBook[password] ? passwordBook[password] : "Password Invalid."
+            outputField.textContent = "";
+
+            function typeMessage(index){
+                if (index < information.length){
+                    outputField.textContent += information.charAt(index);
+                    setTimeout(()=> {
+                        typeMessage(index+1);
+                    }, 100);
+                }
+            }
+            
+            typeMessage(0);
         }
     </script>
     </head>
