--- a/password.html
+++ b/password.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Revellion Technologies2024</title>
+    <title>Revellion Technologies 2024</title>
     <link rel="icon" href="static/images/R.svg"/>
     <link rel="stylesheet" href="static/css/index.css">
     <meta property="og:title" content="Revellion Technologies" />
@@ -12,12 +12,25 @@
         
         function checkPassword(){
             let outputField  = document.getElementById("output");
-            let password = document.getElementById("password").value;
+            let password = document.getElementById("password").value.toLowerCase();
             let passwordBook = {
-                29: "Let the games begin."
+                29: "Let the games begin.",
+                carrots: "This next one may be hard to see, where my car sleeps may be the key.",
+                jerry: "Can you help me fix my desktop.",
+                "knock knock": "It's pretty much useless at this point.",
+                sundown: "You'll be looking for this next hint until dawn.",
+                "return_to_sender": "I thought you had some mail here, must have gotten left at your old address.",
+                shots: "Hey, I'm not a punk, this one is under where we get drunk.",
+                "full-time": "Happiness really is a whole job.",
+                siri: "Hey Siri, where did I leave that hint?",
+                amped: "Without me, this apartment would be dark and cold.",
+                hunger: "You're not you when you are hungry.",
+                battery: "Without an engine, the storage areas have storage areas.",
+
+
             }
-            console.log(password);
-            let information = passwordBook[password] ? passwordBook[password] : "Password Invalid."
+            console.log(`Password Attempt: ${password}`);
+            let information = passwordBook[password] ?? "Password Invalid."
             outputField.textContent = "";
 
             function typeMessage(index){
@@ -38,7 +51,7 @@
     <div class="container">
         <!-- <img class="logo" src="static/images/R.svg" alt="" srcset=""> -->
         <div class="side-by-side">
-            <p class="side1 terminal-text" id="title">></p>
+            <p class="side1 terminal-text" id="title">&gt;</p>
             <input type="text" class="side2 terminal-text password-field" id="password">
         </div>
         <br>
@@ -51,9 +64,6 @@
 <script>
     let loadingText = document.getElementById("title");
     setInterval(() => {
-        if (loadingText.style.color == "black") loadingText.style.color = "white";
-        else{
-            loadingText.style.color = "black";
-        }
+        loadingText.style.color == "black" ? loadingText.style.color = "white" : loadingText.style.color = "black";
     }, 500)
 </script>
