added auto mobile keyboard dismissal, and fixed issue with hint scrolling off page.

--- a/password.html
+++ b/password.html
@@ -8,8 +8,6 @@
     <meta property="og:image" content="https://github.com/RevellionLLC/RevellionLLC.github.io/blob/7f49adba674d5b28242607b14b519a1347fdab8d/static/images/R.png?raw=true" />
 
     <script>
-
-        
         function checkPassword(){
             let outputField  = document.getElementById("output");
             let password = document.getElementById("password").value.toLowerCase();
@@ -55,10 +53,10 @@
             <input type="text" class="side2 terminal-text password-field" id="password">
         </div>
         <br>
-        <button class="terminal-text submit"  onclick="checkPassword()">Submit</button>
-
-        <p class="terminal-text" id="output"></p>
+        <button class="terminal-text submit" id="submitButton" onclick="checkPassword()">Submit</button>
+        
     </div>
+    <p class="terminal-text output" id="output"></p>
 </body>
 
 <script>
@@ -66,4 +64,21 @@
     setInterval(() => {
         loadingText.style.color == "black" ? loadingText.style.color = "white" : loadingText.style.color = "black";
     }, 500)
+    // Get the input field and submit button
+    const inputField = document.getElementById('password');
+    const submitButton = document.getElementById('submitButton');
+
+    // Add event listener to the input field
+    inputField.addEventListener('keypress', function(event) {
+    // Check if the Enter key was pressed (key code 13)
+        if (event.keyCode === 13) {
+            // Prevent the default action of the Enter key press (form submission)
+            event.preventDefault();
+            // Simulate a click on the submit button
+            submitButton.click();
+
+            submitButton.focus();
+        }
+    });
+
 </script>
