--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Revellion LLC - Please Wait</title>
+    <title>Revellion Tech</title>
     <link rel="icon" href="static/images/R.svg"/>
     <link rel="stylesheet" href="static/css/index.css">
     <meta property="og:title" content="Revellion Technologies" />
